--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ambient-lib": "^0.1.5",
     "dotenv": "^8.2.0",
+    "firebase": "^8.3.1",
     "obniz-noble": "^2.2.0"
   }
 }
